# cognitive-cache

./: .gitignore  LICENSE  README.md  demo.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: context-suggest.yml  publish.yml  test.yml
benchmark/: analyze.py  analyze_patches.py  curate_dataset.py  dataset.py  evaluator.py  prompt_template.py  run_local.py  run_test.py  runner.py
benchmark/dataset/: issues.json
benchmark/results/: results_20260331_122108.json  results_20260331_123503.json  results_20260331_124909.json  results_20260331_151811.json  results_20260331_152934.json  results_20260331_153917.json  results_20260331_183325.json  results_20260331_220708.json  results_20260403_180907.json  results_20260403_204838.json
specs/: 2026-04-03-library-api-cli-mcp-design.md  2026-04-03-library-api-cli-mcp-plan.md
src/cognitive_cache/: __init__.py  api.py  cli.py  mcp_server.py  models.py
src/cognitive_cache/baselines/: base.py  embedding_select.py  full_stuff.py  grep_select.py  llm_triage.py  random_select.py
src/cognitive_cache/core/: chunker.py  orderer.py  selector.py  value_function.py
src/cognitive_cache/indexer/: git_analyzer.py  graph_builder.py  repo_indexer.py  token_counter.py
src/cognitive_cache/llm/: adapter.py  claude_adapter.py  llamacpp_adapter.py  openai_adapter.py
src/cognitive_cache/signals/: base.py  change_recency.py  embedding_sim.py  file_role_prior.py  graph_distance.py  redundancy.py  symbol_overlap.py
tests/: test_api.py  test_baselines.py  test_benchmark.py  test_cli.py  test_core.py  test_git_analyzer.py  test_graph_builder.py  test_indexer.py  test_integration.py  test_llm_adapter.py  test_mcp_server.py  test_models.py  test_patch_eval.py  test_signals.py
