[project]
name = "cognitive-cache"
version = "0.2.0"
description = "Optimal context orchestration for LLMs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Anish Shrestha" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
    "tiktoken>=0.7.0",
    "scikit-learn>=1.4.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
benchmark = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[project.urls]
Homepage = "https://github.com/Anyesh/cognitive-cache"
Repository = "https://github.com/Anyesh/cognitive-cache"
Issues = "https://github.com/Anyesh/cognitive-cache/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
cognitive-cache = "cognitive_cache.cli:main"
cognitive-cache-mcp = "cognitive_cache.mcp_server:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
